--- a/templates/sys_inspect/inspect_dev_list.html
+++ b/templates/sys_inspect/inspect_dev_list.html
@@ -93,8 +93,8 @@
                                                 </td>
                                                 <td class="text-center"
                                                     style="vertical-align:middle;">
-                                                    {% for each_user in users %}{% if each_user.id is each_device.create_user %}
-                                                        {{ each_user.user_name }}{% else %}暂无{% endif %}
+                                                    {% for each_user in users %}{% if each_user.id == each_device.create_user %}
+                                                        {{ each_user.user_name }}{% endif %}
                                                     {% endfor %}
                                                 </td>
                                                 <td class="text-center"
