--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1081,7 +1081,7 @@ body {
 }
 
 html {
-  background: url('../img/bg_login.jpg');
+  background-color: #122b40;
   background-attachment: fixed;
   background-size: cover;
 }
