--- a/templates/users/login/login.html
+++ b/templates/users/login/login.html
@@ -10,12 +10,12 @@
 {% block login_base_body %}
     <div id="login_board">
         <div class="row" >
-            <div class="col-sm-4" style="">
-                <div id="login_box" style="background-color: #122b40;boder:1px;solid-color: grey">
+            <div class="col-md-4 col-md-offset-4" style="solid-color: grey">
+                <div id="login_box" style="background-color: #122b40;border:1px">
                     <p class="m-t"></p>
-                    <div>
+                    <div style="line-height: 3;">
                         <i class="glyphicon glyphicon-send" style="font-size: x-large; color: white;"></i>
-                        <span class="font-bold text-center"
+                        <span class="font-bold"
                               style="font-size: 32px; color: white; padding-left: 10px;">登录</span>
 
                     </div>
