--- a/templates/base.html
+++ b/templates/base.html
@@ -528,7 +528,7 @@
         <!-- 页面底部开始 -->
         <div class="app-footer wrapper b-t bg-light" style="height: 3%">
             <span class="pull-right">v 1</span>
-            <a href="https://github.com/PythonTra1nee/OPMS_v3" target="_blank">© 2018 Copyright 运维管理 | More info</a>
+            <a href="https://github.com/MaLei666/oms" target="_blank">© 2018 Copyright 运维管理 | More info</a>
         </div>
         <!-- 页面底部结束 -->
         <!-- =============================================================================== -->
