--- a/templates/users/login_base.html
+++ b/templates/users/login_base.html
@@ -12,7 +12,7 @@
     <title>
         {% block login_base_title %}
         {% endblock login_base_title %}
-        | OPMS 运维管理系统
+        | 运维管理系统
     </title>
 
     <!-- css -->
